snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.module.sha1
e311b6d25d97503610e265ad34dbe3decd525822